samples/_failures_safe/1761221190_1d2ab4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b57fd16a.c: In function ‘main’:
./samples/SAFE/__tmp_b57fd16a.c:116:13: error: expected declaration or statement at end of input
  116 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_b57fd16a.c:116:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b57fd16a.c:116:13: error: expected declaration or statement at end of input
